--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,46 +3,54 @@ on: [push, pull_request]
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.15.x
 
+      - name: ZIP
+        shell: bash
+        run: |
+          sudo apt update
+          sudo apt install zip unzip -y
+
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Dependencies
-        run: |
-          go get -v -d -t ./...
-
       - name: Build
-        shell: pwsh
+        shell: bash
         run: |
-          .\scripts\CI\BUILD.ps1
-      
-      - name: Run UPX
+          export GOROOT_FINAL=/usr
+          export CGO_ENABLED=0
+          export GOOS=linux
+          export GOARCH=amd64
+          go build -a -trimpath -asmflags "-s -w" -ldflags "-s -w" -gcflags "-l=4" -o release/stream
+          cp -f default.json release
+          cp -f scripts/installer/*.sh release
+
+      - name: UPX Compress
         uses: crazy-max/ghaction-upx@v1
         with:
           version: latest
-          file: .\release\stream
+          file: release/stream
           args: --ultra-brute
 
-      - name: Compress
-        shell: pwsh
+      - name: ZIP Compress
+        shell: bash
         run: |
-          .\scripts\CI\PACK.ps1
+          zip -9 -r release.zip release/*
 
       - name: Checksum
-        shell: pwsh
+        shell: bash
         run: |
-          echo "::Set-Env Name=FILE_R_SHA256::$(.\scripts\CI\SHA256.ps1 .\release.zip)"
+          export FILE_R_SHA256=$(sha256sum clear.sh | awk '{print $1}')
 
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
-          name: Release
+          name: release
           path: release
 
       - name: Release
@@ -54,7 +62,7 @@ jobs:
           prerelease: true
           draft: false
           files: |
-            .\release.zip
+            release.zip
           body: |
             [![](https://img.shields.io/badge/Telegram-Group-blue)](https://t.me/aioCloud) [![](https://img.shields.io/badge/Telegram-Channel-green)](https://t.me/aioCloud_channel)
             ## 更新日志
@@ -62,4 +70,4 @@ jobs:
             ## 校验和
             | 文件名 | SHA256 |
             | :-- | :-- |
-            | release.zip | ${{ env.FILE_R_SHA256 }} |
+            | release.zip | ${ FILE_R_SHA256 } |
