--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,16 +42,16 @@ jobs:
         run: |
           zip -9 -r release.zip release/*
 
-      - name: Checksum
-        shell: bash
-        run: |
-          export FILE_R_SHA256=$(sha256sum clear.sh | awk '{print $1}')
-
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
           name: release
           path: release
+
+      - name: Checksum
+        shell: bash
+        run: |
+          echo "::Set-Env Name=CHECKSUM::$(sha256sum release.zip | awk '{print $1}')"
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -70,4 +70,4 @@ jobs:
             ## 校验和
             | 文件名 | SHA256 |
             | :-- | :-- |
-            | release.zip | ${ FILE_R_SHA256 } |
+            | release.zip | ${{ env.CHECKSUM }} |
