--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -1,6 +1,6 @@
 server-name SmartDNS
-bind 127.0.0.1:1234
-bind-tcp 127.0.0.1:1234
+bind :53
+bind-tcp :53
 tcp-idle-time 10
 cache-size 10000
 prefetch-domain no
