--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -17,5 +17,23 @@ server 1.1.1.1:53
 server 1.0.0.1:53
 server 8.8.8.8:53
 server 8.8.4.4:53
-conf-file /etc/smartdns/stream-netflix.conf
-conf-file /etc/smartdns/stream-bilibili.conf
+
+# Global
+server 1.1.1.1:53 -exclude-default-group -group stream
+conf-file /etc/smartdns/stream.conf
+
+# Bilibili
+# server 1.1.1.1:53 -exclude-default-group -group bilibili
+# conf-file /etc/smartdns/stream-bilibili.conf
+
+# CBS
+# server 1.1.1.1:53 -exclude-default-group -group cbs
+# conf-file /etc/smartdns/stream-cbs.conf
+
+# DMM
+# server 1.1.1.1:53 -exclude-default-group -group dmm
+# conf-file /etc/smartdns/stream-dmm.conf
+
+# Netflix
+# server 1.1.1.1:53 -exclude-default-group -group netflix
+# conf-file /etc/smartdns/stream-netflix.conf
