--- a/smartdns/stream-netflix.conf
+++ b/smartdns/stream-netflix.conf
@@ -1,18 +1,18 @@
-address /fast.com/1.1.1.1
-address /netflix.com/1.1.1.1
-address /netflix.net/1.1.1.1
-address /nflxext.com/1.1.1.1
-address /nflximg.com/1.1.1.1
-address /nflximg.net/1.1.1.1
-address /nflxso.net/1.1.1.1
-address /nflxvideo.net/1.1.1.1
-address /netflixdnstest0.com/1.1.1.1
-address /netflixdnstest1.com/1.1.1.1
-address /netflixdnstest2.com/1.1.1.1
-address /netflixdnstest3.com/1.1.1.1
-address /netflixdnstest4.com/1.1.1.1
-address /netflixdnstest5.com/1.1.1.1
-address /netflixdnstest6.com/1.1.1.1
-address /netflixdnstest7.com/1.1.1.1
-address /netflixdnstest8.com/1.1.1.1
-address /netflixdnstest9.com/1.1.1.1
+nameserver /fast.com/netflix
+nameserver /netflix.com/netflix
+nameserver /netflix.net/netflix
+nameserver /nflxext.com/netflix
+nameserver /nflximg.com/netflix
+nameserver /nflximg.net/netflix
+nameserver /nflxso.net/netflix
+nameserver /nflxvideo.net/netflix
+nameserver /netflixdnstest0.com/netflix
+nameserver /netflixdnstest1.com/netflix
+nameserver /netflixdnstest2.com/netflix
+nameserver /netflixdnstest3.com/netflix
+nameserver /netflixdnstest4.com/netflix
+nameserver /netflixdnstest5.com/netflix
+nameserver /netflixdnstest6.com/netflix
+nameserver /netflixdnstest7.com/netflix
+nameserver /netflixdnstest8.com/netflix
+nameserver /netflixdnstest9.com/netflix
