domains: add Naver TV

--- a/smartdns/stream.conf
+++ b/smartdns/stream.conf
@@ -101,6 +101,8 @@ nameserver /nicovideo.jp/stream
 nameserver /nimg.jp/stream
 nameserver /socdm.com/stream
 nameserver /tver.jp/stream
+nameserver /naver.com/stream
+nameserver /smartmediarep.com/stream
 nameserver /c4assets.com/stream
 nameserver /channel4.com/stream
 nameserver /aod-dash-uk-live.akamaized.net/stream
