Update bilibili domains

--- a/smartdns/stream.conf
+++ b/smartdns/stream.conf
@@ -24,7 +24,16 @@ nameserver /edgedatg.com/stream
 nameserver /edgedatg.go.com/stream
 nameserver /cdn.registerdisney.go.com/stream
 nameserver /bilibili.com/stream
+nameserver /biligame.com/stream
+nameserver /biligame.net/stream
+nameserver /bilivideo.com/stream
+nameserver /bilivideo.cn/stream
+nameserver /acgvideo.com/stream
 nameserver /hdslb.com/stream
+nameserver /acg.tv/stream
+nameserver /b23.tv/stream
+nameserver /biliapi.com/stream
+nameserver /biliapi.net/stream
 nameserver /foxsports01-i.akamaihd.net/stream
 nameserver /foxsports02-i.akamaihd.net/stream
 nameserver /foxsports03-i.akamaihd.net/stream
