Use smartdns as dns service

--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -1,8 +1,11 @@
 server-name SmartDNS
-bind :53
-bind-tcp :53
+bind [::]:53
+bind-tcp [::]:53
+bind 127.0.0.1:5353 -no-rule-addr
+bind-tcp 127.0.0.1:5353 -no-rule-addr
 tcp-idle-time 10
 cache-size 10000
+cache-persist no
 prefetch-domain no
 serve-expired no
 speed-check-mode ping
@@ -13,7 +16,6 @@ log-level info
 log-file /tmp/smartdns.log
 log-size 8M
 log-num 2
-server 1.1.1.1:53 -exclude-default-group -group stream
 server 1.1.1.1:53
 server 1.0.0.1:53
 server 8.8.8.8:53
