--- a/smartdns/stream.conf
+++ b/smartdns/stream.conf
@@ -1,198 +1,198 @@
-nameserver /ipinfo.io/stream
-nameserver /fast.com/stream
-nameserver /netflix.com/stream
-nameserver /netflix.net/stream
-nameserver /nflxext.com/stream
-nameserver /nflximg.com/stream
-nameserver /nflximg.net/stream
-nameserver /nflxso.net/stream
-nameserver /nflxvideo.net/stream
-nameserver /netflixdnstest0.com/stream
-nameserver /netflixdnstest1.com/stream
-nameserver /netflixdnstest2.com/stream
-nameserver /netflixdnstest3.com/stream
-nameserver /netflixdnstest4.com/stream
-nameserver /netflixdnstest5.com/stream
-nameserver /netflixdnstest6.com/stream
-nameserver /netflixdnstest7.com/stream
-nameserver /netflixdnstest8.com/stream
-nameserver /netflixdnstest9.com/stream
-nameserver /go-mpulse.net/stream
-nameserver /theplatform.com/stream
-nameserver /uplynk.com/stream
-nameserver /edgedatg.com/stream
-nameserver /edgedatg.go.com/stream
-nameserver /cdn.registerdisney.go.com/stream
-nameserver /bilibili.com/stream
-nameserver /biligame.com/stream
-nameserver /biligame.net/stream
-nameserver /bilivideo.com/stream
-nameserver /bilivideo.cn/stream
-nameserver /acgvideo.com/stream
-nameserver /hdslb.com/stream
-nameserver /acg.tv/stream
-nameserver /b23.tv/stream
-nameserver /biliapi.com/stream
-nameserver /biliapi.net/stream
-nameserver /foxsports01-i.akamaihd.net/stream
-nameserver /foxsports02-i.akamaihd.net/stream
-nameserver /foxsports03-i.akamaihd.net/stream
-nameserver /cdn-fox-networks-group-green.akamaized.net/stream
-nameserver /staticasiafox.akamaized.net/stream
-nameserver /d3cv4a9a9wh0bt.cloudfront.net/stream
-nameserver /foxplus.com/stream
-nameserver /bcbolthboa-a.akamaihd.net/stream
-nameserver /hboasia1-i.akamaihd.net/stream
-nameserver /hboasia2-i.akamaihd.net/stream
-nameserver /hboasia3-i.akamaihd.net/stream
-nameserver /hboasia4-i.akamaihd.net/stream
-nameserver /hboasia5-i.akamaihd.net/stream
-nameserver /44wilhpljf.execute-api.ap-southeast-1.amazonaws.com/stream
-nameserver /s3-ap-southeast-1.amazonaws.com/stream
-nameserver /cf-images.ap-southeast-1.prod.boltdns.net/stream
-nameserver /players.brightcove.net/stream
-nameserver /dai3fd1oh325y.cloudfront.net/stream
-nameserver /hbogoasia.com/stream
-nameserver /hbogoasia.hk/stream
-nameserver /iqiyi.com/stream
-nameserver /iqiyipic.com/stream
-nameserver /qy.net/stream
-nameserver /mytvsuper.com/stream
-nameserver /tvb.com/stream
-nameserver /nowe.com/stream
-nameserver /nowestatic.com/stream
-nameserver /d1k2us671qcoau.cloudfront.net/stream
-nameserver /d2anahhhmp1ffz.cloudfront.net/stream
-nameserver /dfp6rglgjqszk.cloudfront.net/stream
-nameserver /api.viu.now.com/stream
-nameserver /viu.com/stream
-nameserver /viu.tv/stream
-nameserver /bahamut.com.tw/stream
-nameserver /gamer.com.tw/stream
-nameserver /gamer-cds.cdn.hinet.net/stream
-nameserver /gamer2-cds.cdn.hinet.net/stream
-nameserver /kfs.io/stream
-nameserver /kktv-theater.kk.stream/stream
-nameserver /kkbox.com/stream
-nameserver /kkbox.com.tw/stream
-nameserver /kktv.com.tw/stream
-nameserver /kktv.me/stream
-nameserver /litvfreemobile-hichannel.cdn.hinet.net/stream
-nameserver /litv.tv/stream
-nameserver /d3c7rimkq79yfu.cloudfront.net/stream
-nameserver /linetv.tw/stream
-nameserver /4gtv.tv/stream
-nameserver /4gtvfreepc-cds.cdn.hinet.net/stream
-nameserver /4gtvfreepcvod-cds.cdn.hinet.net/stream
-nameserver /4gtvpc-cds.cdn.hinet.net/stream
-nameserver /4gtvpcvod-cds.cdn.hinet.net/stream
-nameserver /hamifans.emome.net/stream
-nameserver /skyking.com.tw/stream
-nameserver /abema.io/stream
-nameserver /abema.tv/stream
-nameserver /ds-linear-abematv.akamaized.net/stream
-nameserver /ds-vod-abematv.akamaized.net/stream
-nameserver /ameba.jp/stream
-nameserver /hayabusa.io/stream
-nameserver /d151l6v8er5bdm.cloudfront.net/stream
-nameserver /dazn-api.com/stream
-nameserver /dazn.com/stream
-nameserver /dazndn.com/stream
-nameserver /indazn.com/stream
-nameserver /intercom.io/stream
-nameserver /dmm-extension.com/stream
-nameserver /dmm.co.jp/stream
-nameserver /dmm.com/stream
-nameserver /happyon.jp/stream
-nameserver /hulu.jp/stream
-nameserver /dmc.nico/stream
-nameserver /nicovideo.jp/stream
-nameserver /nimg.jp/stream
-nameserver /socdm.com/stream
-nameserver /tver.jp/stream
-nameserver /naver.com/stream
-nameserver /smartmediarep.com/stream
-nameserver /c4assets.com/stream
-nameserver /channel4.com/stream
-nameserver /aod-dash-uk-live.akamaized.net/stream
-nameserver /aod-hls-uk-live.akamaized.net/stream
-nameserver /vod-dash-uk-live.akamaized.net/stream
-nameserver /vod-thumb-uk-live.akamaized.net/stream
-nameserver /bbc.co/stream
-nameserver /bbc.co.uk/stream
-nameserver /bbc.com/stream
-nameserver /bbci.co/stream
-nameserver /bbci.co.uk/stream
-nameserver /bbcfmt.hs.llnwd.net/stream
-nameserver /itvpnpmobile-a.akamaihd.net/stream
-nameserver /itv.com/stream
-nameserver /itvstatic.com/stream
-nameserver /d349g9zuie06uo.cloudfront.net/stream
-nameserver /channel5.com/stream
-nameserver /my5.tv/stream
-nameserver /skysports.com/stream
-nameserver /cbs.com/stream
-nameserver /cbsaavideo.com/stream
-nameserver /cbsivideo.com/stream
-nameserver /cbsi.live.ott.irdeto.com/stream
-nameserver /cwtv.com/stream
-nameserver /cwtv-amd-akamai.akamaized.net/stream
-nameserver /edge.cwtv-vod-ext.top.comcast.net/stream
-nameserver /edge.cwtv-egress.top.comcast.net/stream
-nameserver /thecwvideo.com/stream
-nameserver /www.cwseed.com/stream
-nameserver /bamgrid.com/stream
-nameserver /disney-plus.net/stream
-nameserver /disneyplus.com/stream
-nameserver /dssott.com/stream
-nameserver /disneynow.com/stream
-nameserver /bcbolt446c5271-a.akamaihd.net/stream
-nameserver /edge.api.brightcove.com/stream
-nameserver /encoretvb.com/stream
-nameserver /espn.com/stream
-nameserver /espncdn.com/stream
-nameserver /fox.com/stream
-nameserver /foxdcg.com/stream
-nameserver /freeform.com/stream
-nameserver /fxnetworks.com/stream
-nameserver /hbo.com/stream
-nameserver /hbogo.com/stream
-nameserver /hbomax.com/stream
-nameserver /hbonow.com/stream
-nameserver /hulu.com/stream
-nameserver /huluim.com/stream
-nameserver /hulustream.com/stream
-nameserver /pbs.org/stream
-nameserver /peacocktv.com/stream
-nameserver /sling.com/stream
-nameserver /movetv.com/stream
-nameserver /mtv.com/stream
-nameserver /mtvnservices.com/stream
-nameserver /nationalgeographic.com/stream
-nameserver /nbcuadops-vh.akamaihd.net/stream
-nameserver /nbc.co/stream
-nameserver /nbc.com/stream
-nameserver /nbcuni.com/stream
-nameserver /tve-static-syfy.akamaized.net/stream
-nameserver /tve-static-telemundo.akamaized.net/stream
-nameserver /tve-static-universalkids.akamaized.net/stream
-nameserver /tve-static-usanetwork.akamaized.net/stream
-nameserver /tvebravoeast-x.akamaized.net/stream
-nameserver /tvebravoeast-y.akamaized.net/stream
-nameserver /tvecnbc-x.akamaized.net/stream
-nameserver /tvecnbc-y.akamaized.net/stream
-nameserver /tveeeast-x.akamaized.net/stream
-nameserver /tveeeast-y.akamaized.net/stream
-nameserver /tvemsnbc-x.akamaized.net/stream
-nameserver /tvenbcsn-x.akamaized.net/stream
-nameserver /tvenbcsn-y.akamaized.net/stream
-nameserver /tveoxygeneast-x.akamaized.net/stream
-nameserver /tveoxygeneast-x.akamaized.net/stream
-nameserver /tvesyfyeast-x.akamaized.net/stream
-nameserver /tvesyfyeast-y.akamaized.net/stream
-nameserver /tveuniversalkidshls.akamaized.net/stream
-nameserver /tveusaeast-x.akamaized.net/stream
-nameserver /tveusaeast-x.akamaized.net/stream
-nameserver /tvewnbc-x.akamaized.net/stream
-nameserver /tvewnbc-y.akamaized.net/stream
-nameserver /usanetwork.com/stream
+address /ipinfo.io/1.1.1.1
+address /fast.com/1.1.1.1
+address /netflix.com/1.1.1.1
+address /netflix.net/1.1.1.1
+address /nflxext.com/1.1.1.1
+address /nflximg.com/1.1.1.1
+address /nflximg.net/1.1.1.1
+address /nflxso.net/1.1.1.1
+address /nflxvideo.net/1.1.1.1
+address /netflixdnstest0.com/1.1.1.1
+address /netflixdnstest1.com/1.1.1.1
+address /netflixdnstest2.com/1.1.1.1
+address /netflixdnstest3.com/1.1.1.1
+address /netflixdnstest4.com/1.1.1.1
+address /netflixdnstest5.com/1.1.1.1
+address /netflixdnstest6.com/1.1.1.1
+address /netflixdnstest7.com/1.1.1.1
+address /netflixdnstest8.com/1.1.1.1
+address /netflixdnstest9.com/1.1.1.1
+address /go-mpulse.net/1.1.1.1
+address /theplatform.com/1.1.1.1
+address /uplynk.com/1.1.1.1
+address /edgedatg.com/1.1.1.1
+address /edgedatg.go.com/1.1.1.1
+address /cdn.registerdisney.go.com/1.1.1.1
+address /bilibili.com/1.1.1.1
+address /biligame.com/1.1.1.1
+address /biligame.net/1.1.1.1
+address /bilivideo.com/1.1.1.1
+address /bilivideo.cn/1.1.1.1
+address /acgvideo.com/1.1.1.1
+address /hdslb.com/1.1.1.1
+address /acg.tv/1.1.1.1
+address /b23.tv/1.1.1.1
+address /biliapi.com/1.1.1.1
+address /biliapi.net/1.1.1.1
+address /foxsports01-i.akamaihd.net/1.1.1.1
+address /foxsports02-i.akamaihd.net/1.1.1.1
+address /foxsports03-i.akamaihd.net/1.1.1.1
+address /cdn-fox-networks-group-green.akamaized.net/1.1.1.1
+address /staticasiafox.akamaized.net/1.1.1.1
+address /d3cv4a9a9wh0bt.cloudfront.net/1.1.1.1
+address /foxplus.com/1.1.1.1
+address /bcbolthboa-a.akamaihd.net/1.1.1.1
+address /hboasia1-i.akamaihd.net/1.1.1.1
+address /hboasia2-i.akamaihd.net/1.1.1.1
+address /hboasia3-i.akamaihd.net/1.1.1.1
+address /hboasia4-i.akamaihd.net/1.1.1.1
+address /hboasia5-i.akamaihd.net/1.1.1.1
+address /44wilhpljf.execute-api.ap-southeast-1.amazonaws.com/1.1.1.1
+address /s3-ap-southeast-1.amazonaws.com/1.1.1.1
+address /cf-images.ap-southeast-1.prod.boltdns.net/1.1.1.1
+address /players.brightcove.net/1.1.1.1
+address /dai3fd1oh325y.cloudfront.net/1.1.1.1
+address /hbogoasia.com/1.1.1.1
+address /hbogoasia.hk/1.1.1.1
+address /iqiyi.com/1.1.1.1
+address /iqiyipic.com/1.1.1.1
+address /qy.net/1.1.1.1
+address /mytvsuper.com/1.1.1.1
+address /tvb.com/1.1.1.1
+address /nowe.com/1.1.1.1
+address /nowestatic.com/1.1.1.1
+address /d1k2us671qcoau.cloudfront.net/1.1.1.1
+address /d2anahhhmp1ffz.cloudfront.net/1.1.1.1
+address /dfp6rglgjqszk.cloudfront.net/1.1.1.1
+address /api.viu.now.com/1.1.1.1
+address /viu.com/1.1.1.1
+address /viu.tv/1.1.1.1
+address /bahamut.com.tw/1.1.1.1
+address /gamer.com.tw/1.1.1.1
+address /gamer-cds.cdn.hinet.net/1.1.1.1
+address /gamer2-cds.cdn.hinet.net/1.1.1.1
+address /kfs.io/1.1.1.1
+address /kktv-theater.kk.1.1.1.1/1.1.1.1
+address /kkbox.com/1.1.1.1
+address /kkbox.com.tw/1.1.1.1
+address /kktv.com.tw/1.1.1.1
+address /kktv.me/1.1.1.1
+address /litvfreemobile-hichannel.cdn.hinet.net/1.1.1.1
+address /litv.tv/1.1.1.1
+address /d3c7rimkq79yfu.cloudfront.net/1.1.1.1
+address /linetv.tw/1.1.1.1
+address /4gtv.tv/1.1.1.1
+address /4gtvfreepc-cds.cdn.hinet.net/1.1.1.1
+address /4gtvfreepcvod-cds.cdn.hinet.net/1.1.1.1
+address /4gtvpc-cds.cdn.hinet.net/1.1.1.1
+address /4gtvpcvod-cds.cdn.hinet.net/1.1.1.1
+address /hamifans.emome.net/1.1.1.1
+address /skyking.com.tw/1.1.1.1
+address /abema.io/1.1.1.1
+address /abema.tv/1.1.1.1
+address /ds-linear-abematv.akamaized.net/1.1.1.1
+address /ds-vod-abematv.akamaized.net/1.1.1.1
+address /ameba.jp/1.1.1.1
+address /hayabusa.io/1.1.1.1
+address /d151l6v8er5bdm.cloudfront.net/1.1.1.1
+address /dazn-api.com/1.1.1.1
+address /dazn.com/1.1.1.1
+address /dazndn.com/1.1.1.1
+address /indazn.com/1.1.1.1
+address /intercom.io/1.1.1.1
+address /dmm-extension.com/1.1.1.1
+address /dmm.co.jp/1.1.1.1
+address /dmm.com/1.1.1.1
+address /happyon.jp/1.1.1.1
+address /hulu.jp/1.1.1.1
+address /dmc.nico/1.1.1.1
+address /nicovideo.jp/1.1.1.1
+address /nimg.jp/1.1.1.1
+address /socdm.com/1.1.1.1
+address /tver.jp/1.1.1.1
+address /naver.com/1.1.1.1
+address /smartmediarep.com/1.1.1.1
+address /c4assets.com/1.1.1.1
+address /channel4.com/1.1.1.1
+address /aod-dash-uk-live.akamaized.net/1.1.1.1
+address /aod-hls-uk-live.akamaized.net/1.1.1.1
+address /vod-dash-uk-live.akamaized.net/1.1.1.1
+address /vod-thumb-uk-live.akamaized.net/1.1.1.1
+address /bbc.co/1.1.1.1
+address /bbc.co.uk/1.1.1.1
+address /bbc.com/1.1.1.1
+address /bbci.co/1.1.1.1
+address /bbci.co.uk/1.1.1.1
+address /bbcfmt.hs.llnwd.net/1.1.1.1
+address /itvpnpmobile-a.akamaihd.net/1.1.1.1
+address /itv.com/1.1.1.1
+address /itvstatic.com/1.1.1.1
+address /d349g9zuie06uo.cloudfront.net/1.1.1.1
+address /channel5.com/1.1.1.1
+address /my5.tv/1.1.1.1
+address /skysports.com/1.1.1.1
+address /cbs.com/1.1.1.1
+address /cbsaavideo.com/1.1.1.1
+address /cbsivideo.com/1.1.1.1
+address /cbsi.live.ott.irdeto.com/1.1.1.1
+address /cwtv.com/1.1.1.1
+address /cwtv-amd-akamai.akamaized.net/1.1.1.1
+address /edge.cwtv-vod-ext.top.comcast.net/1.1.1.1
+address /edge.cwtv-egress.top.comcast.net/1.1.1.1
+address /thecwvideo.com/1.1.1.1
+address /www.cwseed.com/1.1.1.1
+address /bamgrid.com/1.1.1.1
+address /disney-plus.net/1.1.1.1
+address /disneyplus.com/1.1.1.1
+address /dssott.com/1.1.1.1
+address /disneynow.com/1.1.1.1
+address /bcbolt446c5271-a.akamaihd.net/1.1.1.1
+address /edge.api.brightcove.com/1.1.1.1
+address /encoretvb.com/1.1.1.1
+address /espn.com/1.1.1.1
+address /espncdn.com/1.1.1.1
+address /fox.com/1.1.1.1
+address /foxdcg.com/1.1.1.1
+address /freeform.com/1.1.1.1
+address /fxnetworks.com/1.1.1.1
+address /hbo.com/1.1.1.1
+address /hbogo.com/1.1.1.1
+address /hbomax.com/1.1.1.1
+address /hbonow.com/1.1.1.1
+address /hulu.com/1.1.1.1
+address /huluim.com/1.1.1.1
+address /hulu1.1.1.1.com/1.1.1.1
+address /pbs.org/1.1.1.1
+address /peacocktv.com/1.1.1.1
+address /sling.com/1.1.1.1
+address /movetv.com/1.1.1.1
+address /mtv.com/1.1.1.1
+address /mtvnservices.com/1.1.1.1
+address /nationalgeographic.com/1.1.1.1
+address /nbcuadops-vh.akamaihd.net/1.1.1.1
+address /nbc.co/1.1.1.1
+address /nbc.com/1.1.1.1
+address /nbcuni.com/1.1.1.1
+address /tve-static-syfy.akamaized.net/1.1.1.1
+address /tve-static-telemundo.akamaized.net/1.1.1.1
+address /tve-static-universalkids.akamaized.net/1.1.1.1
+address /tve-static-usanetwork.akamaized.net/1.1.1.1
+address /tvebravoeast-x.akamaized.net/1.1.1.1
+address /tvebravoeast-y.akamaized.net/1.1.1.1
+address /tvecnbc-x.akamaized.net/1.1.1.1
+address /tvecnbc-y.akamaized.net/1.1.1.1
+address /tveeeast-x.akamaized.net/1.1.1.1
+address /tveeeast-y.akamaized.net/1.1.1.1
+address /tvemsnbc-x.akamaized.net/1.1.1.1
+address /tvenbcsn-x.akamaized.net/1.1.1.1
+address /tvenbcsn-y.akamaized.net/1.1.1.1
+address /tveoxygeneast-x.akamaized.net/1.1.1.1
+address /tveoxygeneast-x.akamaized.net/1.1.1.1
+address /tvesyfyeast-x.akamaized.net/1.1.1.1
+address /tvesyfyeast-y.akamaized.net/1.1.1.1
+address /tveuniversalkidshls.akamaized.net/1.1.1.1
+address /tveusaeast-x.akamaized.net/1.1.1.1
+address /tveusaeast-x.akamaized.net/1.1.1.1
+address /tvewnbc-x.akamaized.net/1.1.1.1
+address /tvewnbc-y.akamaized.net/1.1.1.1
+address /usanetwork.com/1.1.1.1
